@@ -1137,7 +1137,10 @@ public class RiskUIUtil {
     }
     
     
-    
+
+    /**
+     * @see net.yura.domination.mapstore.MapChooser#createImage(java.io.InputStream) 
+     */
     public static BufferedImage read(InputStream in) throws IOException {
         try {
             BufferedImage img = ImageIO.read(in);
